# NV_TRT_SSD

./: .gitignore  CMakeLists.txt  pluginImplement.cpp  pluginImplement.h  tensorNet.cpp  tensorNet.h
original_models/VGGNet/VOC0712Plus/SSD_300x300_ft/: deploy.prototxt  finetune_ssd_pascal.py  solver.prototxt  test.prototxt  train.prototxt
recognition/: CMakeLists.txt  recognition.cpp
